@@ -6160,3 +6160,12 @@ M       vbm12.m
 
 ------------------------------------------------------------------------
 r657 | gaser | 2014-11-25 11:13:51
+
+M       CHANGES.txt
+M       html/vbm12.html
+M       vbm12.m
+
+Solved issue with missing function for longitduinal data in vbm12.m.
+
+------------------------------------------------------------------------
+r658 | gaser | 2014-11-25 11:46:03
